--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactjsedu",
   "version": "0.1.0",
-  "homepage": "https://bella7898.github.io/reactjsedu/",
+  "homepage": "https://heartsofloveorg.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
